[package]
name = "jserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = "0.59"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tracing-appender = "0.2"
tracing-error = "0.2"
chrono = "0.4.19"
clap = { version = "4.4.18", features = ["derive"] }
serde_json = "*"
